--- a/Complex Interface 03/style.css
+++ b/Complex Interface 03/style.css
@@ -43,6 +43,10 @@ body {
 }
 
 .detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3em;
 }
 
 h1 {
@@ -79,6 +83,9 @@ button {
   color: white;
   background-color: #ff7732;
   border: none;
-  border-radius: 10px;
-  width: 300px;
+  border-radius: 6px;
+  width: 280px;
+  height: 50px;
+  font-weight: 600;
+  font-size: 1em;
 }
